# concord

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  THIRD_PARTY_NOTICES  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
bible-api/: pyproject.toml
bible-api/src/bible_api/: __init__.py  app.py  caching.py  config.py  dependencies.py  errors.py  routers.py  schemas.py  shaping.py
bible-api/src/bible_api/static/: README.md
bible-api/tests/: apikit.py  conftest.py  test_books_endpoint.py  test_caching.py  test_chapters_endpoint.py  test_cors_cache_vary.py  test_cross_references_endpoint.py  test_cross_references_errors.py  test_cross_references_real.py  test_docs_offline.py  test_errors.py  test_headings_endpoint.py  test_healthz.py  test_journeys_endpoint.py  test_missing_verse.py  test_notes_endpoint.py  test_notes_search_endpoint.py  test_places_endpoint.py  test_places_real.py  test_random_endpoint.py  test_response_shapes.py  test_search_caching.py  test_search_endpoint.py  test_search_errors.py  test_search_multi_endpoint.py  test_search_real.py  test_security_headers.py  test_semantic_boot_guard.py  test_semantic_concurrency.py  test_semantic_endpoint_real.py  test_semantic_search_endpoint.py  test_semantic_timeout.py  test_strongs_endpoint.py  test_topics_endpoint.py  test_translations_endpoint.py  test_utility_real.py  test_verses_endpoint.py
bible-core/: pyproject.toml
bible-core/src/bible_core/: __init__.py  db.py  geo.py  journeys.py  loader.py  normalize.py  notes.py  parser.py  queries.py  resolver.py  schema.py  seed.py  strongs.py  topics.py
bible-core/tests/: geokit.py  loaderkit.py  noteskit.py  parserkit.py  test_canonical_books_in_sync.py  test_cross_ref_loader.py  test_cross_ref_queries.py  test_db.py  test_geo_loader.py  test_geo_loader_real.py  test_import.py  test_iter_verses.py  test_journey_queries.py  test_journeys_loader.py  test_journeys_loader_real.py  test_licensing_safety.py  test_loader.py  test_loader_real.py  test_loader_validation.py  test_no_fused_headings.py  test_no_web_deps.py  test_normalize.py  test_notes_loader.py  test_notes_search.py  test_ol_translation_loads.py  test_parser_disambiguation.py  test_parser_edge_cases.py  test_parser_grammar.py  test_parser_purity.py  test_parser_roundtrip.py  test_place_queries.py  test_queries.py  test_resolver.py  test_resolver_real.py  test_schema.py  test_search.py  test_search_multi.py  test_section_headings_loader.py  test_seed.py  test_seed_validation.py  (+3 more)
bible-semantic/: pyproject.toml
bible-semantic/src/bible_semantic/: __init__.py  build.py  model.py  schema.py  search.py  store.py
bible-semantic/tests/: test_build_embeddings.py  test_embed_in_process_example.py  test_semantic_cosine.py  test_semantic_embed.py  test_semantic_import.py  test_semantic_normalize.py  test_semantic_schema.py  test_semantic_search_real.py  test_semantic_store.py
data/: SOURCES.md
data/journeys/: journeys.json
data/notes/: WEB.json
data/strongs/: lexicon-hebrew.json
data/translations/: SBLGNT.json
docs/: API.md  SECURITY.md  SPEC.md  canonical-books.md  dev-notes.md  openapi.json
docs/adr/: ADR-0001-semantic-endpoint-overload-protection.md  ADR-0002-semantic-endpoint-deadline.md  ADR-0003-search-multi-translation-shape.md  ADR-0004-public-notes-path.md  ADR-0005-section-headings-endpoint.md  ADR-0006-topical-bible.md  ADR-0007-word-study.md  ADR-0008-journeys.md
docs/v2/: SPEC.md
docs/v3/: SPEC.md
docs/v4/: SPEC.md  notes-ingest.md
docs/v5/: SPEC.md
docs/v6/: SPEC.md
docs/v7/: SPEC.md
examples/: embed_in_process.py  notes-sample.json
scripts/: build_embeddings.py  convert_naves_topics.py  convert_net_notes.py  convert_step_tagnt.py  convert_step_tahot.py  convert_strongs_lexicon.py  convert_web_footnotes.py  dump_openapi.py  fetch_model.py  fix_fused_headings.py  fused_headings_manifest.csv  fused_headings_manifest.md
