[project]
name = "bible-api"
version = "0.0.0"
description = "Concord's thin FastAPI HTTP face over bible-core."
requires-python = ">=3.11"
dependencies = [
    "bible-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "structlog>=24",
]

# Local path-dependency wiring: bible-core is resolved from this workspace, not PyPI.
[tool.uv.sources]
bible-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bible_api"]
