[project]
name = "bible-core"
version = "0.0.0"
description = "Concord's standalone Scripture engine — zero web dependencies."
requires-python = ">=3.11"
# HARD INVARIANT: no web framework may ever appear here (no fastapi, starlette,
# uvicorn, httpx, ...). This package is importable in-process by other apps; keeping
# it web-free is the entire reason the two packages are separate. See docs/SPEC.md §2.
# v1 uses only the standard library (sqlite3, dataclasses, ...).
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bible_core"]
